Fixed overlapping fonts problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Varela', sans-serif;
-    font-size: 20px;
     padding: 20px 40px;
   }
   
